--- a/Develop/style.css
+++ b/Develop/style.css
@@ -34,29 +34,24 @@ textarea {
 }
 
 .time-block {
-  text-align: center;
+  text-align: left;
   border-radius: 15px;
+  width: 800px;
+ 
 }
 
 .row {
   white-space: pre-wrap;
   height: 80px;
   border-top: 1px solid white;
+  margin-bottom: 20px
 }
 
-#hour {
-  position: relative;
-  background: white;
+.hour {
+  background-color: #ffffff;
   color: #000000;
-  text-align: right;
-  border-top: 1px solid #000000;
-  width: 10%;
-}
-
-.agenda {
-  width: 100%;
-  height: 100%;
-  padding: 0%;
+  border-top: 1px dashed #000000;
+  width: 150px;
 }
 
 .past {
@@ -80,6 +75,8 @@ textarea {
   border-bottom-right-radius: 15px;
   background-color: #06AED5;
   color: white;
+  height: 100px;
+  width: 85px;
 }
 
 .saveBtn i:hover {
